# facebook-post-etl

./: .gitignore  LICENSE  README.md  etl.py  pyproject.toml  utils.py
diagrams/: all_frames.py  econimic.py  neue.py
filtered_posts/: 1630491206-4601634526533517.txt  1630669193-4608152389215064.txt  1630848643-4611516768878626.txt  1630931697-4617613244935645.txt  1631186626-4626708274026142.txt  1631282437-4630280183668951.txt  1631302432-4631146290249007.txt  1631430026-4629723507057952.txt  1631559603-4639424432754526.txt  1631646002-4639663306063972.txt  1631688990-4645066212190348.txt  1631700341-4645448802152089.txt  1631799647-4649159748447661.txt  1631887216-4652143804815922.txt  1631977205-4652205928143043.txt  1632056444-4652380351458934.txt  1632222006-4664588203571482.txt  1632250831-4664872316876404.txt  1632391257-4671375629559406.txt  1632426320-4668812103149092.txt  1632565608-4678497628847206.txt  1632672041-4682831081747194.txt  1632990901-4652162628147373.txt  1633240859-4702219119808390.txt  1633445730-4710237805673188.txt  1633618802-4716382468392055.txt  1633697497-4719654928064809.txt  1633708515-4719001288130173.txt  1633784442-4719470334749935.txt  1634201461-4738456119518023.txt  1634310005-4742428145787487.txt  1634542955-4742134615816840.txt  1634742026-4757642730932695.txt  1634828445-4760566427306992.txt  1635175806-4773028416060793.txt  1635243476-4775582565805378.txt  1635528600-4786355651394736.txt  1635597001-4786410541389247.txt  1635701401-4786438674719767.txt  1635706812-4785586534804981.txt  (+334 more)
frames/: all.py  new_frames.py  (+6 more)
(+876 files in other folders)
