[tool.poetry]
name = "facebook-post-etl"
version = "0.1.0"
description = "An etl to extract facebook posts from an account, filter it and save it as txt files."
authors = ["antonykamp <info@antonykamp.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
facebook-scraper = "^0.2.59"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
